Tighten product response mapping for faster reads.
Reduce unnecessary work on list responses so product pages stay lighter and more responsive.